--- a/Project/Maze 3.0/Assembly-CSharp.csproj
+++ b/Project/Maze 3.0/Assembly-CSharp.csproj
@@ -66,6 +66,8 @@
      <Compile Include="Assets\Scripts\MoveKey.cs" />
      <Compile Include="Assets\Scripts\Movement2D.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
+     <Compile Include="Assets\Scripts\PlayerMovement02.cs" />
      <Compile Include="Assets\Scripts\Rotateplayer.cs" />
      <Compile Include="Assets\Scripts\SampleMove2D.cs" />
      <Compile Include="Assets\Scripts\ScoreScript.cs" />
