--- a/Project/Maze 3.1/Assembly-CSharp.csproj
+++ b/Project/Maze 3.1/Assembly-CSharp.csproj
@@ -69,6 +69,7 @@
      <Compile Include="Assets\Scripts\MoveKey2.cs" />
      <Compile Include="Assets\Scripts\MoveKey3.cs" />
      <Compile Include="Assets\Scripts\Movement2D.cs" />
+     <Compile Include="Assets\Scripts\OpenLevel2.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement.cs" />
      <Compile Include="Assets\Scripts\PlayerMovement02.cs" />
