--- a/Project/Maze 3.1/Assembly-CSharp.csproj
+++ b/Project/Maze 3.1/Assembly-CSharp.csproj
@@ -46,12 +46,14 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Activate.cs" />
+     <Compile Include="Assets\Scripts\Box.cs" />
      <Compile Include="Assets\Scripts\ButtonAdd.cs" />
      <Compile Include="Assets\Scripts\CollectingInfo.cs" />
      <Compile Include="Assets\Scripts\CollectingKey.cs" />
      <Compile Include="Assets\Scripts\Collide.cs" />
      <Compile Include="Assets\Scripts\Delete.cs" />
      <Compile Include="Assets\Scripts\DoorButtonScript.cs" />
+     <Compile Include="Assets\Scripts\DoorButtonScript02.cs" />
      <Compile Include="Assets\Scripts\DrawLine.cs" />
      <Compile Include="Assets\Scripts\DrawRectangle.cs" />
      <Compile Include="Assets\Scripts\EnterMinimap.cs" />
@@ -61,13 +63,16 @@
      <Compile Include="Assets\Scripts\Key.cs" />
      <Compile Include="Assets\Scripts\Key2.cs" />
      <Compile Include="Assets\Scripts\Key3.cs" />
+     <Compile Include="Assets\Scripts\Key4.cs" />
      <Compile Include="Assets\Scripts\KeyCounterScript.cs" />
      <Compile Include="Assets\Scripts\KeyData.cs" />
      <Compile Include="Assets\Scripts\KeyDoorScript.cs" />
      <Compile Include="Assets\Scripts\KeyPadSystem.cs" />
+     <Compile Include="Assets\Scripts\MoveBox.cs" />
      <Compile Include="Assets\Scripts\MoveKey.cs" />
      <Compile Include="Assets\Scripts\MoveKey2.cs" />
      <Compile Include="Assets\Scripts\MoveKey3.cs" />
+     <Compile Include="Assets\Scripts\MoveKey4.cs" />
      <Compile Include="Assets\Scripts\Movement2D.cs" />
      <Compile Include="Assets\Scripts\OpenLevel2.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
@@ -84,6 +89,7 @@
      <Compile Include="Assets\Scripts\UsingKey.cs" />
      <Compile Include="Assets\Scripts\UsingKey2.cs" />
      <Compile Include="Assets\Scripts\UsingKey3.cs" />
+     <Compile Include="Assets\Scripts\UsingKey4.cs" />
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
